# Web_server_task

./: Makefile  README.md  locustfile.py  pyproject.toml  task.md
src/app/async_main/: Dockerfile  consant.py  main.py
src/app/core/enums/: consant_async.py  constant_sync.py
src/app/core/modules/: __init__.py  weather_client.py
src/app/core/schemas/: __init__.py  data.py
src/app/core/weather_api/: weather_client.py
src/app/sync/: Dockerfile  main.py
src/async/: Dockerfile  consant.py  main.py
src/async_main/: Dockerfile  consant.py  main.py  pyproject.toml
src/sync/: Dockerfile  constant.py  main.py  pyproject.toml
src/tests/: constant.py  test_main.py  test_main_async.py  test_main_sync.py
tests/: constant.py  test_main_async.py  test_main_sync.py
