[tool.poetry]
name = "web-server"
version = "0.1.0"
description = ""
authors = ["Daniil Protasenia <danikprotaseney@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flake8 = "^6.1.0"
locust = "^2.20.0"
aiohttp = "^3.9.1"
asyncio = "^3.4.3"
pytest = "^7.4.4"
isort = "^5.13.2"
mypy = "^1.8.0"

[tool.poetry.group.dev.dependencies]
pyannotate = "^1.2.0"

[tool.flake8]
exclude = [".git", "__pycache__", "env", "venv"]
max-line-length = 120
max-complexity = 8

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.black]
line-length = 120

[[tool.poetry.packages]]
include = "app"
from = "src"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
