[tool.poetry]
name = "web-server"
version = "0.1.0"
description = "Sync and Async Web Server"
authors = ["Daniil Protasenia <danikprotaseney@gmail.com>"]
readme = "README.md"


# System
[tool.poetry.dependencies]
python = "^3.10"


# Poetry core
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


# Servers
[tool.poetry.group.server]
optional = true

[tool.poetry.group.server.dependencies]
aiohttp = "^3.9.1"
asyncio = "^3.4.3"
pytest = "^7.4.4"
httpx = "^0.26.0"
pydantic = "^2.5.3"
locust = "^2.20.0"


# Apps for test build
[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
aiohttp = "^3.9.1"
pytest-cov = "^4.1.0"
httpx = "^0.26.0"
pydantic = "^2.5.3"

# Dev group
[tool.poetry.dev-dependencies]
pyannotate = "^1.2.0"  #?
flake8 = "^6.1.0"
Flake8-pyproject = "^1.1.0"
isort = "^5.13.2"
mypy = "^1.8.0"
black = "^23.12.1"


# Configs
## Linters
[tool.flake8]
exclude = [".git", "__pycache__", "env", "venv"]
max-line-length = 120
max-complexity = 8

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.black]
line-length = 120

## Tests
[tool.pytest.ini_options]
addopts = "-v -s"
testpaths = ["tests"]
pythonpath = ["."]

python_files = [
    "test_main_async.py",
    "test_main_sync.py",
]


