[tool.poetry]
name = "web-server"
version = "0.1.0"
description = ""
authors = ["Daniil Protasenia <danikprotaseney@gmail.com>"]
readme = "README.md"



[tool.poetry.dependencies]
python = "^3.10"
flake8 = "^6.1.0"
locust = "^2.20.0"
aiohttp = "^3.9.1"

[tool.flake8]
exclude = [".git", "__pycache__", "env", "venv"]
max-line-length = 120
max-complexity = 8

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
